2008-06-18  Glenn Morris  <rgm@gnu.org>

	* org.el (org-map-entries): Let-bind `file'.

2008-06-17  Carsten Dominik  <dominik@science.uva.nl>

	* org-colview.el (org-columns-next-allowed-value): Bug fix.

	* org-colview-xemacs.el (org-columns-next-allowed-value): Bug fix.

	* org-agenda.el (org-agenda-get-closed): Get the end time into the
	agenda prefix as well.

	* org-publish.el (org-publish-org-index): Make a properly indented
	list.

	* org.el (org-calendar-agenda-action-key): New option.
	(org-get-cursor-date): New function.
	(org-mark-entry-for-agenda-action): New command.
	(org-overriding-default-time): New variable.
	(org-read-date): Respect `org-overriding-default-time'.

	* org-remember.el (org-remember-apply-template): Respect the
	ovverriding default time.

	* org-agenda.el (org-agenda-action-marker): New variable.
	(org-agenda-action): New command.
	(org-agenda-do-action): New function.

2008-06-17  Carsten Dominik  <dominik@science.uva.nl>

	* org.el (org-schedule, org-deadline): Protect scheduled and
	deadline tasks against changes that accidently remove the
	repeater.  Also show a message with the new date when done.

2008-06-17  Carsten Dominik  <dominik@science.uva.nl>

	* org.el (org-beginning-of-line): Cater for the case when there
	are tags but no headline text.
	(org-align-tags-here): Convert to tabs only when indent-tabs-mode
	it set.

2008-06-17  Carsten Dominik  <dominik@science.uva.nl>

	* org-mhe.el (org-mhe-get-message-folder-from-index): Make sure
	the return value is nil instead of "nil" when there is no match.

	* org-exp.el (org-insert-centered): Use fill-column instead of
	80.
	(org-export-as-ascii): Use string-width to measure the width of
	the heading.

	* org.el (org-diary-to-ical-string): No longer kill buffer
	FROMBUF, this is now done by the caller.

	* org-exp.el (org-print-icalendar-entries): Move the call to
	`org-diary-to-ical-string' out of the loop, and kill the buffer
	afterwords.
